# Renderer

./: CMakeLists.txt  README.md
src/: build.h  grid.h  main.cpp  mesh.h  model.h  raycaster.h  shader.h  ui.h
src/gridshader/: grid.fs  grid.vs
src/shader/: shader.fs  shader.vs
